--- a/age-calculator/package.json
+++ b/age-calculator/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "moment": "^2.29.4",
+    "vee-validate": "^3.4.15",
     "vue": "^2.6.11"
   },
   "devDependencies": {
